--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
           window.open("https://notion.so/fracture", '_blank').focus();
 
         else if (id === "email") {
-          window.open("mt.bsnss@gmail.com", '_blank').focus();
+          window.open("mailto:mt.bsnss@gmail.com", '_blank').focus();
 
         else if (id === "instagram") {
-          window.open("instagram.com", '_blank').focus();
+          window.open("https://instagram.com/tremolo_truong", '_blank').focus();
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/", '_blank').focus();
