--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     .instagram:hover,
     .instagram::after {
-      background: #f86ee1;
+      background-color: #f86ee1;
     }
 
     .linkedin:hover,
