--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
     <div class="wrapper">
 
       <!-- Start blog Icon -->
-      <div id="blog" onclick="navigate(this.id)" class="fill  blog">
+      <div id="blog" onclick="window.open('https://notion.so/fracture', '_blank').focus();" class="fill  blog">
         <span class="icon"><i class="fa-solid fa-blog"></i></span>
       </div>
       <!-- End blog Icon -->
 
 
       <!-- Start email Icon -->
-      <div id="email" onclick="navigate(this.id)" class="fill email">
+      <div id="email" onclick="window.open('mailto:mt.bsnss@gmail.com', '_blank').focus();" class="fill email">
         <span class="icon email"><i class="fa-solid fa-envelope"></i></span>
       </div>
       <!-- End email Icon -->
@@ -127,21 +127,21 @@
 
 
       <!-- Start instagram Icon -->
-      <div id="instagram" onclick="navigate(this.id)" class="fill instagram">
+      <div id="instagram" onclick="window.open('https://instagram.com/tremolo_truong', '_blank').focus();" class="fill instagram">
         <span class="icon"><i class="fab fa-instagram"></i></span>
       </div>
       <!-- End instagram Icon -->
 
 
       <!-- Start youtube Icon -->
-      <div id="youtube" onclick="navigate(this.id)" class="fill youtube">
+      <div id="youtube" onclick="window.open('https://www.youtube.com/@tremolo_truong', '_blank').focus();" class="fill youtube">
         <span class="icon"><i class="fab fa-youtube"></i></span>
       </div>
       <!-- End youtube Icon -->
 
     
       <!-- Start linkedin Icon -->
-      <div id="linkedin" onclick="navigate(this.id)" class="fill linkedin">
+      <div id="linkedin" onclick="window.open('https://www.linkedin.com/in/tremolo', '_blank').focus();" class="fill linkedin">
         <span class="icon"><i class="fab fa-linkedin"></i></span>
       </div>
       <!-- End linkedin Icon -->
@@ -150,30 +150,6 @@
     </div>
 
 
-
-
-    <script>
-      function navigate(id) {
-
-        //if you want the URL to open in the same window use '_parent'  instead of '_blank'
-
-        if (id === "blog")
-          window.open("https://notion.so/fracture", '_blank').focus();
-
-        else if (id === "email") {
-          window.open("mailto:mt.bsnss@gmail.com", '_blank').focus();
-
-        else if (id === "instagram") {
-          window.open("https://instagram.com/tremolo_truong", '_blank').focus();
-        }
-        else if (id === "linkedin") {
-          window.open("https://www.linkedin.com/", '_blank').focus();
-        }
-        else if (id === "youtube") {
-          window.open("https://www.youtube.com/@tremolo_truong", '_blank').focus();
-        }
-
-    </script>
 
 
 
